--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "engines": {
     "node": "15.x"
   },
+  "scripts": {
+    "build": "tsc --project ./",
+    "postinstall": "tsc"
+  },
   "dependencies": {
     "aws-sdk": "^2.745.0",
     "body-parser": "^1.19.0",
@@ -28,12 +32,16 @@
     "twitter": "^1.7.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.0.14",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "serverless-domain-manager": "^4.2.0"
+    "serverless-domain-manager": "^4.2.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
